Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,21 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-7-1884c184f6f2>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-1884c184f6f2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(what + 5)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#for number in [0, 1, 2]:\n",
-    " #   print(what + 5) incorrect undefined loop variable"
+    " #   print(what + 5) incorrect undefined loop variable called"
    ]
   },
   {
