Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -265,10 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Croatia\n",
+      "1\n",
+      "USA\n",
+      "2\n",
+      "Argentina\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [0, 1, 2]:\n",
+    "    print(i)\n",
+    "    print(countries[i])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -322,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +348,7 @@
        "3"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
